<resources>
    <string name="app_name">mGerrit</string>
    <string name="reviewable">Review</string>
    <string name="merged">Merged</string>
    <string name="abandoned">Abandoned</string>
    <string name="status_explanation_new">Change is still being reviewed.</string>
    <string name="status_explanation_submitted">Change has been submitted and is in the merge queue. It may be waiting
        for one or more dependencies.
    </string>
    <string name="status_explanation_merged">Change has been merged to its branch.</string>
    <string name="status_explanation_abandoned">Change was abandoned by its owner or administrator.</string>
    <string name="status_explanation_draft">Change is a draft change that only consists of draft patchsets.</string>
    <string name="patchset_labels_code_reviewer">Code-Review:</string>
    <string name="patchset_labels_verified_reviewer">Verified:</string>
    <string name="dash" translatable="false">-</string>
    <string name="inserted">Inserted Lines:</string>
    <string name="deleted">Deleted Lines:</string>
    <string name="binary_file">Binary file</string>
    <string name="none_found">None Found</string>
    <string name="please_try_again">Please back out and try again</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_help">Help</string>
    <string name="choose_gerrit_instance">Choose Team Gerrit Instance</string>
    <string name="choose_gerrit_instance_condensed">Choose Gerrit Source</string>
    <string name="commit_committer">Committer:</string>
    <string name="commit_author">Author:</string>
    <string name="commit_owner">Owner:</string>
    <string name="failed_to_parse_json_response">Failed to parse response from</string>
    <string name="show_exception">Show Exception</string>
    <string name="exit">Exit</string>
    <string name="gerrit_call_failed">Failed to get useful response from Gerrit instance please check your connection
        and try again.
    </string>
    <string name="establishing_connection">Establishing connection…</string>
    <string name="transferring">Transferring JSON encoded data…</string>
    <string name="downloading_status" formatted="false">%d of %d bytes downloaded\t%d%% completed</string>
    <string name="connection_established">Connection established</string>
    <string name="initializing_data_transfer">Initializing data transfer…</string>
    <string name="communications_error">Communication ERROR!!!</string>
    <string name="transferring_json_data">Transferring JSON encoded data…</string>
    <string name="open_source_libs">Open Source Libraries</string>
    <string name="nine_old_androids" translatable="false">NineOldAndroids</string>
    <string name="nine_old_androids_website" translatable="false">http://nineoldandroids.com/</string>
    <string name="listview_animations" translatable="false">ListViewAnimations</string>
    <string name="listview_animations_website" translatable="false">https://github.com/nhaarman/ListViewAnimations</string>
    <string name="support_library" translatable="false">Support Library v4</string>
    <string name="support_library_website" translatable="false">http://developer.android.com/tools/support-library/index.html</string>
    <string name="gson_library" translatable="false">Gson</string>
    <string name="gson_library_website" translatable="false">http://code.google.com/p/google-gson/</string>
    <string name="jodatime" translatable="false">Joda-Time</string>
    <string name="jodatime_website" translatable="false">http://www.joda.org/joda-time</string>
    <string name="event_bus" translatable="false">EventBus</string>
    <string name="event_bus_website" translatable="false">http://greenrobot.github.io/EventBus/</string>
    <string name="aosp_volley_website" translatable="false">https://android.googlesource.com/platform/frameworks/volley/</string>
    <string name="aosp_volley_title" translatable="false">AOSP\'s Volley</string>
    <string name="circle_image_view_title" translatable="false">CircleImageView</string>
    <string name="circle_image_view_website" translatable="false">https://github.com/hdodenhof/CircleImageView</string>
    <string name="explain_status_title">Explain statuses</string>
    <string name="explain_status_summary">Brief explanation of the Status tabs meanings</string>
    <string name="menu_gerrit_instance">Gerrit Instance</string>
    <string name="owner_gravatar">Owner\'s Gravatar profile image</string>
    <string name="author_gravatar">Author\'s Gravatar profile image</string>
    <string name="committer_gravatar">Committer\'s Gravatar profile image</string>
    <string name="menu_refresh">Refresh</string>
    <string name="current_revision_is_draft_message">Current revision is a draft.
        Some information will be unavailable
    </string>
    <string name="comments_card_title">Comments:</string>
    <string name="unknown">Unknown</string>
    <string name="developers_role">Choose developer\'s role to view</string>
    <string name="commit_reviewer">Commit Reviewer</string>
    <string name="context_menu_view_diff_viewer">Internally</string>
    <string name="context_menu_diff_view_in_browser">Browser</string>
    <string name="context_menu_change_browser">View change in browser</string>
    <string name="context_menu_change_viewer">View change details</string>
    <string name="choose_diff_view">How would you like to view the diff?</string>
    <string name="context_menu_track_user" formatted="false">Track user %s</string>
    <string name="context_menu_track_project">Track project</string>
    <string name="stalker_mode_toast">Now stalking user:</string>
    <string name="share">Share</string>
    <string name="view_in_browser">View this change in the default browser</string>
    <string name="moar_info">More detailed information on this change</string>
    <string name="commit_shared_from_mgerrit" formatted="false">Commit %s shared from mGerrit!</string>
    <string name="found_cards_toast" formatted="false"><![CDATA[Found %d commits in %d seconds]]></string>
    <string name="menu_projects">View by project</string>
    <string name="aokp_changelog">AOKP Changelog</string>
    <string name="download_update">Download</string>
    <string name="please_select_update_for_range">Please select file to view changelog</string>
    <string name="download_rom_zip">Download ROM zip</string>
    <string name="failed_to_decode_base64">Failed to decode the Base64 response.</string>
    <string name="return_was_null">Response was null… Please view in browser</string>
    <string name="using_gerrit_toast">Using Gerrit:</string>
    <string name="google_now_style_animations_title">Animate cards</string>
    <string name="google_now_style_animations_summary">Enable Google Now style animations while drawing cards</string>
    <string name="loading">Loading diff\u2026</string>
    <string name="add_gerrit_team">New Gerrit</string>
    <string name="please_enter_gerrit_name">Please enter the Gerrit instance\'s name</string>
    <string name="please_enter_gerrit_url">Please enter the Gerrit url</string>
    <string name="add_team_url">New Gerrit team URL</string>
    <string name="add_gerrit_name">New Gerrit team name</string>
    <string name="handshake_fail_message">Failed handshake try installing provider\'s certificate on your device.
    </string>
    <string name="caused_by">Caused by:</string>
    <string name="at">at</string>
    <string name="locales">TimeZone localization</string>
    <string name="server_timezone_title">Server TimeZone</string>
    <string name="local_timezone_title">Local TimeZone</string>
    <string name="server_timezone_summary">Local TimeZone where Gerrit server is located.</string>
    <string name="local_timezone_summary">The TimeZone provided as default may be inaccurate. Use this to override the
        default local TimeZone.
    </string>
    <string name="patchset_labels_change_diff">Change Differences</string>
    <string name="remove_content">Remove this content</string>
    <string name="connection_starting">Starting Gerrit request</string>
    <string name="projects_search_hint">Search projects</string>
    <string name="changes_search_hint">Search changes</string>
    <string name="failed_to_find_url">Failed to find project\'s URL</string>
    <string name="change_status_update">A new change status was selected</string>
    <string name="invalid_gerrit_name">The Gerrit name set was invalid</string>
    <string name="invalid_gerrit_url">The Gerrit URL set was invalid</string>
    <string name="gerrit_protocol">https://</string>
    <string name="change_detail_heading" formatted="false">Change %d</string>
    <string name="commit_branch">Branch:</string>
    <string name="commit_topic">Topic:</string>
    <string name="change_theme">Select Theme</string>
    <string name="theme_light">Light theme</string>
    <string name="theme_dark">Dark theme</string>
    <string name="gerrit_help">Gerrit help</string>
    <string name="not_connected">There\'s no network connection right now. Try again later.</string>
    <string name="aokp_changelog_card_title">Recent AOKP Builds</string>
    <string name="changelog_loading">Searching for recent builds&#8230;</string>
    <string name="retry_label">Retry</string>
    <string name="header_properties">Properties</string>
    <string name="header_commit_message">Commit Message</string>
    <string name="header_changed_files">Changed Files</string>
    <string name="header_reviewers">Reviewers</string>
    <string name="header_comments">Comments</string>
    <string name="commit_updated">Updated:</string>
    <string name="renamed_label">Renamed from:</string>
    <string name="no_changelog">There are no recent builds for your device</string>
    <string name="diff_back">Previous File</string>
    <string name="diff_next">Next File</string>
    <string name="diff_options_title">View change diffs</string>
    <string name="diff_options_ask">Ask</string>
    <string name="diff_options_internal">In internal viewer when available</string>
    <string name="diff_options_external">In browser</string>
    <string name="diff_options_always">Remember my decision</string>
    <string name="diff_menu_internal_condensed">Viewer</string>
    <string name="diff_menu_external_condensed">Browser</string>
    <string name="diff_no_files">No non-binary files were found in this change.</string>
    <string name="failed_to_get_diff">Failed to load diff</string>
    <string name="failed_to_load_image">Failed to load image</string>
    <string name="failed_to_decode_image">Failed to decode image</string>
    <string name="diff_text_loading">Loading diff text</string>
    <string name="diff_image_loading">Loading image</string>
    <string name="loading_changes">Loading More Changes&#8230;</string>
    <string name="header_date_format">EEEE, MMMM dd yyyy</string>
    <string name="gerrit_signin_title">Sign in to %s</string>
    <string name="gerrit_signin_username">Username</string>
    <string name="gerrit_signin_password">Password</string>
    <string name="gerrit_signin_signin">Sign in</string>
    <string name="gerrit_signin_help">Enter your username and password to star changes from mGerrit. If you do not know your username/password, you can generate one on %s.</string>
    <string name="gerrit_signin_help_link_text">your account settings page</string>
    <string name="gerrit_signin_btn_success">Signed in</string>
    <string name="gerrit_signin_btn_progress">Signing in...</string>
    <string name="gerrit_signin_btn_error">Error</string>
    <string name="gerrit_signin_btn_loader_searching">Searching for credentials...</string>
    <string name="gerrit_signin_username_password_failure">Your username and/or password is incorrect.
        Please try again.</string>
</resources>