<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2013 Android Open Kang Project (AOKP)
  ~  Author: Jon Stanford (JBirdVegas), 2013
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="gerrit_instances_key"
        android:title="@string/choose_gerrit_instance"/>

    <ListPreference
        android:key="app_theme"
        android:title="@string/change_theme"
        android:entries="@array/themes_entries"
        android:entryValues="@array/themes_entry_values"
        android:defaultValue="@string/theme_light_value"/>

    <CheckBoxPreference
        android:key="animation_key"
        android:title="@string/google_now_style_animations_title"
        android:summary="@string/google_now_style_animations_summary"
        android:defaultValue="true"/>

    <ListPreference
        android:key="change_diff"
        android:title="@string/diff_options_title"
        android:entries="@array/diff_options"
        android:entryValues="@array/diff_options_values"
        android:defaultValue="@string/diff_option_ask"/>

    <CheckBoxPreference
        android:key="whitespace_tab_code_style_highlighting"
        android:title="@string/whitespace_codestyle_title"
        android:summary="@string/whitespace_codestyle_summary"
        android:defaultValue="true"/>
    <PreferenceCategory
        android:title="@string/locales">

        <ListPreference
            android:key="server_timezone"
            android:title="@string/server_timezone_title"
            android:summary="@string/server_timezone_summary"/>

        <ListPreference
            android:key="local_timezone"
            android:title="@string/local_timezone_title"
            android:summary="@string/local_timezone_summary"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/open_source_libs"
        android:key="libraries"/>
</PreferenceScreen>