<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        style="@style/Help.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reviewable"
        android:textColor="@color/text_orange"/>

    <TextView
        style="@style/Help.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_explanation_new"/>

    <TextView
        style="@style/Help.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/merged"
        android:textColor="@color/text_green"/>

    <TextView
        style="@style/Help.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_explanation_merged"/>

    <TextView
        style="@style/Help.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abandoned"
        android:textColor="@color/text_red"/>

    <TextView
        style="@style/Help.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_explanation_abandoned"/>
</LinearLayout>