<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2013 Android Open Kang Project (AOKP)
  ~  Author: Jon Stanford (JBirdVegas), 2013
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_team_instance"
        android:icon="@drawable/ic_menu_source"
        android:showAsAction="always"/>

    <item android:id="@+id/menu_projects"
          android:title="@string/menu_projects"
          android:showAsAction="always"
          android:icon="@drawable/ic_menu_project"/>

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:title="@string/menu_refresh"
        android:showAsAction="always"/>

    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_menu_moreoverflow_normal_holo_light"
        android:title="@string/menu_preferences"
        android:showAsAction="never"/>

    <item
        android:id="@+id/menu_changelog"
        android:title="@string/aokp_changelog"
        android:showAsAction="never"/>

    <item
        android:id="@+id/menu_help"
        android:title="@string/menu_help"
        android:showAsAction="never"/>
</menu>