<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 Android Open Kang Project (AOKP)
  ~  Author: Evan Conway (P4R4N01D), 2015
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/standard_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gerrit_signin_help"
        android:id="@+id/txtSigninHelp"
        android:layout_marginTop="@dimen/standard_padding"
        android:layout_marginBottom="@dimen/standard_padding" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:inputType="text"
        android:hint="@string/gerrit_signin_username"
        android:paddingTop="@dimen/standard_padding" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:inputType="textVisiblePassword"
        android:hint="@string/gerrit_signin_password"/>

    <Button
        android:layout_width="128dp"
        android:layout_height="64dp"
        android:text="@string/gerrit_signin_signin"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/standard_padding"
        android:height="48dp"/>
</LinearLayout>