<?xml version="1.0" encoding="utf-8"?>

<com.jbirdvegas.mgerrit.objects.CheckableView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="6dp"
    android:paddingRight="6dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/add_team_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_gerrit_name"
                android:inputType="text"/>

            <EditText
                android:id="@+id/add_team_url_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_team_url"
                android:inputType="textUri"
                android:text="@string/gerrit_protocol"/>
            </LinearLayout>

    <RadioButton
        android:id="@+id/chk_gerrit_selected"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:clickable="false"
        android:focusable="false"
        android:checkMark="?android:attr/listChoiceIndicatorSingle"/>
    </LinearLayout>
</com.jbirdvegas.mgerrit.objects.CheckableView>
