<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2013 Android Open Kang Project (AOKP)
  ~  Author: Evan Conway (P4R4N01D), 2013
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="?attr/cardBackgroundColor"
              android:orientation="vertical"
              android:weightSum="1"
              android:paddingBottom="4dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aokp_changelog_card_title"
        android:id="@+id/textView"
        style="?attr/cardTitleStyle"
        android:paddingLeft="12dp"/>

    <ViewSwitcher
        android:id="@+id/vs_changelog_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="@dimen/goo_im_download_rom_ic_padding"
            android:paddingLeft="12dp"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="@dimen/text_size_large"
                android:text="@string/changelog_loading"
                style="@style/CardText"
                android:id="@+id/changelog_searching"
                android:layout_weight="1.00"
                android:gravity="center_vertical"/>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/changelog_progressBar"
                android:indeterminate="true"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="@dimen/goo_im_download_rom_ic_padding"
            android:paddingLeft="12dp">

            <Spinner
                android:id="@+id/changelog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/goo_im_download_rom_ic_padding"
                android:text="@string/download_update"
                android:id="@+id/goo_download_zip_button"
                android:src="?attr/saveIcon"
                android:contentDescription="@string/download_rom_zip"/>
        </LinearLayout>
    </ViewSwitcher>

</LinearLayout>