<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="horizontal"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="left|center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dip"
            android:paddingRight="5dp"
            android:text="@string/commit_owner"
            style="?attr/cardTextStyle"
            android:layout_gravity="center"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dip"
            android:paddingRight="5dip"
            android:text="@string/commit_author"
            style="?attr/cardTextStyle"
            android:textStyle="bold"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dip"
            android:paddingRight="5dp"
            android:text="@string/commit_committer"
            style="?attr/cardTextStyle"
            android:textStyle="bold"
            android:layout_gravity="center"/>


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/prop_card_owner"
            android:layout_gravity="center"
            style="?attr/cardTextStyle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/prop_card_author"
            android:layout_gravity="center"
            android:paddingRight="8dip"
            style="?attr/cardTextStyle"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/prop_card_committer"
            android:layout_gravity="center"
            android:paddingRight="8dip"
            style="?attr/cardTextStyle"/>
    </LinearLayout>
</LinearLayout>