<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/cardBackgroundColor"
    android:elevation="@dimen/z_offset_low"
    android:orientation="horizontal">

    <View
        android:id="@+id/prop_card_status"
        android:layout_width="@dimen/card_stroke_width"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:paddingRight="@dimen/commit_card_stroke_padding"
        tools:background="@android:color/holo_orange_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dip">

        <TextView
            android:id="@+id/prop_card_subject"
            style="?attr/cardTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingLeft="@dimen/standard_padding"
            android:paddingRight="@dimen/standard_padding"
            tools:text="Commit Subject" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/commit_last_update_text"
                style="@style/CardText.CommitOwnerText"
                android:text="@string/commit_updated" />

            <TextView
                android:id="@+id/prop_card_last_update"
                style="@style/CardText.CommitOwnerDetails"
                android:layout_toRightOf="@id/commit_last_update_text" />
        </RelativeLayout>

        <TextView
            android:id="@+id/prop_card_author"
            style="@style/CardText.CommitOwnerText"
            tools:text="@string/commit_author" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/commit_branch_text"
                style="@style/CardText.CommitOwnerText"
                android:text="@string/commit_branch" />

            <TextView
                android:id="@+id/prop_card_branch"
                style="@style/CardText.CommitOwnerDetails"
                android:layout_toRightOf="@id/commit_branch_text" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/prop_card_topic_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/commit_topic_text"
                style="@style/CardText.CommitOwnerText"
                android:text="@string/commit_topic" />

            <TextView
                android:id="@+id/prop_card_topic"
                style="@style/CardText.CommitOwnerDetails"
                android:layout_toRightOf="@+id/commit_topic_text" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/properties_card_view_in_browser"
                style="@style/ActionViewsStyle"
                android:src="?attr/viewIcon" />

            <ImageView
                android:id="@+id/properties_card_share_info"
                style="@style/ActionViewsStyle"
                android:src="?attr/shareIcon" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>